# HydroThunder-TimeTool

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  TECHNICAL.md  checksum.py  ht-time.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
httt/: __init__.py  checksum.py  cli.py  data.py  drive.py  functions.py  ht-time.py
test/: test.sh
test/data/: Sample Info.txt
util/: checksum.py  ht-cmos-copy.sh
