[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hydrothunder-timetool"
version = "0.1.0"
description = "Tool for exporting and importing high score times from Hydro Thunder Arcade as CSV files."
license = "MIT"
authors = ["Shelby Jueden <https://github.com/AkBKukU>"]
readme = "README.md"
packages = [{include = "httt"}]

[tool.poetry.dependencies]
python = ">=3.7.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
pylint = "^2.17.2"

[tool.poetry.scripts]
httt = "httt.cli:main"
